tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__NoBenzeneYet-AAAAAAAAAAAAAAAAAAAMLQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3117,
  "prerequisites": [
    3097
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This questbook page is supposed to explain the Benzene powergen line, but you might have noticed that you haven't made any Benzene yet. That's because the recipe path to get it from Charcoal has an MV recipe, and you can't just skip straight to MV with the small amount of steam you were using in the Bronze Age.\n\nThere are also other paths for renewable power in this page. They have similar sources, or the same source, but different processing lines, and the entire thing looks like a tree branch, with many different ways in which you can go. The Carbon Monoxide path is one example of this, and there are many more to come in the future.\n\nRegardless of which path you chose to get power from your Charcoal, you can now sustain an EBF comfortably and get power more efficiently. It's recommended that you move away from steam in the next tier, because you will need to transport too much of it to produce good amounts of MV power. Fortunately, you won't need steam at all!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "No Benzene Yet",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3097
  ],
  "rewards": [],
  "tasks": []
}
