tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__NormalOrMagic-AAAAAAAAAAAAAAAAAAAMPw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3135,
  "prerequisites": [
    3128
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are two different Super Fuels, not just one. The regular Solid Super Fuel (SSF) has a heat value of 100k, whereas the Magic Solid Super Fuel (MSSF) has it as 150k, or 50% more EU per block. As you can guess, the second one is more valuable, and worth it to make, but it requires even more processing than the first one.\n\nThe good part is, you don't really need lots of Thaumcraft progression. You barely need any, if at all, because there are many ways to make the Magic Fuel Binder and the block itself, including some that don't use any Thaumcraft items. There are so many options that this quest won't ask for a specific one, and it is once again up to you to decide which to choose, if you choose the magic fuel at all. As a tip, Alumentum is not mineable like Diamonds, but it can be automated by throwing Charcoal Dust at a Cauldron, and it has a higher burn value than the inputs. Additionally, for Coal Coke, only the Alumentum option is available.\n\nBasically, the SSF has 3 steps: craft the binder, craft the solid block and craft the fluid. The MSSF has more steps: craft the binder, upgrade it to magic binder, craft the solid block, craft the fluid and then finish with the extra items. Choose your own path.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Normal Or Magic",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3128
  ],
  "rewards": [],
  "tasks": []
}
