tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__PyrolyseOven-AAAAAAAAAAAAAAAAAAAMIA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3104,
  "prerequisites": [
    3098
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Some setups really demand space in your base to work properly. You might have thought that when you finished the Coke Oven automation, but there's also an option in this tier that respects that need for speed by just being a gigantic multiblock: the Pyrolyse Oven.\n\nIn essence, it's the original GregTech large-scale wood processor. It is a massive structure, probably bigger than any other multi you've built before, but it uses simple materials like bronze and steel. If you're able to just throw stacks of those at a controller, you can put this behemoth together and enjoy an alternative to the Advanced Coke Oven that has some extra benefits. Unlike any of the other ovens, this one runs on EU, so you need to route your power back here to process the wood you're feeding it.\n\nWhat makes the Pyro valuable? It outputs a fluid alongside the Charcoal, which you can process for extra power and/or byproducts. Look at NEI to see all the alternatives available to you, this multi can usually output several different fluids, but only one at a time, decided by the circuit inside it. The one to choose at this time is Wood Tar, the same fluid you're extracting from the Charcoal. You get a small constant bonus from having built a Pyro, which is really nice.\n\nHowever, the Pyro uses coils in a similar way to the EBF, and those coils affect the time each recipe takes: if you're using Cupronickel Coils, the recipe time is actually 2x what NEI says! This might be too slow for your needs, so make sure you check how much Charcoal you're getting from here. Kanthal Coils are available in MV, using the IC2 Coolant instead of the Vacuum Freezer.\n\nYou can also boost your Pyro by providing Nitrogen. There are separate recipes for that in NEI.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Pyrolyse Oven",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3098
  ],
  "rewards": [],
  "tasks": []
}
