tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__RenewableEnergy-AAAAAAAAAAAAAAAAAAAMFA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3092,
  "prerequisites": [
    88
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Despite finding oil spouts in the wild, you might have thought about extending the source of power you have used to reach the age of electricity. Steam was your energy, and burnable items your source of that energy, with wood and charcoal being the most likely candidates for automating your first power generation steps. Steam itself, however, is not the best option for all progression tiers, so the question is: what else can that wood do? That is what this questline will explain.\n\nEach tier you reach will challenge you with bigger power needs. Not only do the energy tiers multiply by 4 every time you go up (32 EU/t for LV, 128 for MV, 512 for HV, etc.), but also the necessary growth of your setups, with more steps and each one becoming more complicated. To sustain all this, you might want a fully automated, infinite source of power and chemicals to handle this pack's progression. To achieve this, following the quests in this chapter is sure to be helpful.\n\nAs a final note, the power outputs of a fully renewable powergen like this are not as efficient as oil, which is the price to pay for being renewable. You will need a bigger machine setup to achieve the same EU/t output, but it is still very viable and worth it if you are willing to make this compromise. On the other hand, building these wood-related setups will give you some interesting chemicals to use in later crafts, chemicals that oil cannot directly create. You can choose one or the other, or just follow both paths at the same time if you're curious. It's up to you.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Renewable Energy",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    88
  ],
  "rewards": [],
  "tasks": []
}
