tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__SaplingPower-AAAAAAAAAAAAAAAAAAAMJQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3109,
  "optional_prerequisites": [
    160,
    3141
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Wood has been a big part of your power generation, and you might have even used other plants or fish for oil. Even if that's true, there is a constant output from your trees that has been left unused all this time: the saplings! No matter which tree you chose to automate, you are surely stockpiling the saplings matching that tree, since there's little that is really useful to do with them. At this point, though, you can set up a decent Biomass setup.\n\nTo clarify, Biomass is just a fluid made from plant stuff. It doesn't need to be saplings, but that's most likely something you have a lot of lying around. On top of that, there are multiple types of Biomass, one of them called Fermented Biomass, which is very similar but different, and the recommended path for you to take, since it needs fewer steps than the alternatives and gets you to the DT recipe just fine.\n\nAfter this processing line is finished, you will have a lot of new chemicals automated that you won't have from Wood Tar alone. If you are already processing Wood Vinegar, you will have several repeat outputs, though. That said, if you complete this line, you will get Ethanol + Methanol and Ammonia, which make the Cetane-Boosted Diesel process much easier. All of these lines interact with each other, and you can get bigger and bigger returns if you automate several at once!\n\nFor now, focus on putting together the machines needed to get from Saplings to Fermented Biomass. You will need a Compressor, a Pulverizer and a Pyrolyse Oven for this route.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sapling Power",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
