tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__SkippedintoAmmon-AAAAAAAAAAAAAAAAAAAMNQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3125,
  "prerequisites": [
    3121
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This one is almost a flex, at times, depending on your future plans. Ammonia is one of the most power-intensive early chemicals to produce, from Nitrogen and Hydrogen, with a slow HV recipe compared to most others being produced quickly. It is used very often, in various stages of progression, often to make Nitric Acid that is used for Industrial TNT, Cetane-Boosted Diesel and other products. From Fermented Biomass, you can get it directly, although only one tenth of the amount of biomass used, 1000 mL to 100 mL of Ammonia.\n\nThe rate at which you're going to get this, just from one HV DT, isn't very fast. DTs are slow by design, and the ratio for Ammonia isn't great, so you can accumulate it if you leave the setup running for a while, but you won't be able to feed it into multiple automations that require it unless you upgrade the DT or make more of them, both of which are easy to do later on. Alternatively, you can choose to void the other outputs and work with singleblock Distilleries instead, but this depends on the rate at which you're inputting saplings.\n\nTo note, Ammonia is required to make Cetane-Boosted Diesel, which you can make from Biodiesel. You can get a good mileage for that just from one Fermented Biomass DT.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Skipped into Ammonia",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3121
  ],
  "rewards": [],
  "tasks": []
}
