tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__SodiumHydroxide-AAAAAAAAAAAAAAAAAAAMNg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3126,
  "prerequisites": [
    3099
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Biodiesel needs a bit of powder magic. In reality, this powder is another chemical that this chain uses, Sodium Hydroxide, NaOH. The bad part is that you can't continue without making this, but there's a boon to this: you only need a little bit of it, around 1 dust to make 45 buckets of Biodiesel.\n\nUnlike in the other steps, you can probably get away with batch crafting this instead of automating it, and still have consistent power from this fuel line. One stack of this dust is enough to make more than 100 million EU's worth of power, as long as the other fluids are automated. Given that, you can forget about it for a long time, but not forever. If you choose to not automate it yet, make sure you check it from time to time.\n\n(This can be automated from Salt Water, which can be automated from Tearstalks, a specific IC2 crop. You get Chlorine and Hydrogen as well.)",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sodium Hydroxide",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3099
  ],
  "rewards": [],
  "tasks": []
}
