tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__SourcingYourWood-AAAAAAAAAAAAAAAAAAAMFw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3095,
  "prerequisites": [
    3092
  ],
  "properties": {
    "auto_claim": false,
    "desc": "When it comes to power from wood, your only options so far have been the wood itself and Charcoal. Both of these are low on energy per item, so you will need a lot of wood to have a decent EU/t output. How, then, can you easily get that much? There are two ways: the automated way, and the non-automated way.\n\nThe automated way can be done with one of several machines, but in LV you only have one option: the LV Crop Manager. It can automatically harvest crops in an area around it and, for this situation, the crop you want is one of several Bonsais. You can get them by planting saplings on cropsticks (there is a lot more information about how crops work in the Forestry and Multifarms page), and most types of saplings are equivalent to one another, although not all of them can be planted as crops. The ones that stand out are Spruce, which give a bit more wood than the others, and Oak, which give Apples alongside the usual wood and saplings, possibly useful for some chemistry later.\n\nThe non-automated way can be done earlier, and it only requires two things: an unbreakable Lumber Axe and trees with a lot of wood, like Sacred Oak, Redwood, or Rainforest Oak. This axe will chop down (most of) the trees and award you with stacks and stacks of wood, much faster than the automated way, but with more work. This process might be useful in the beginning, but you will have to automate the wood input at some point.\n\nComplete one of the tasks and get some wood to continue.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sourcing Your Wood",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3092
  ],
  "rewards": [],
  "tasks": []
}
